# country-codify-numbers

./: .gitignore  .pre-commit-config.yaml  pyproject.toml  setup.cfg
country_codify_numbers/: recipient_runner.py  runner.py
country_codify_numbers/data/: country_calling_codes.json  test.csv  test_recipients.csv
tests/: test_country_codify_numbers.py
